--- a/ReservationAdmin/Pages/AanmakenReservering.cshtml
+++ b/ReservationAdmin/Pages/AanmakenReservering.cshtml
@@ -46,5 +46,5 @@
 @(await Html.RenderComponentAsync<ReservationCreate>(RenderMode.ServerPrerendered))
 
 <script src="_framework/blazor.server.js"></script>
-
+<script src="js/button.js"></script>
 
