--- a/ReservationAdmin/Component/ReservationCreate.razor
+++ b/ReservationAdmin/Component/ReservationCreate.razor
@@ -3,6 +3,8 @@
 @using System.Data;
 @using ReservationAdmin.Models;
 
+@using Microsoft.JSInterop;
+@inject IJSRuntime JsRuntime;
 <form>
     <div style="background-color:#D5DAD7; float :left; width: 35%;  height: 100vh;">
         <p style="margin-left: 7%; color: #9597A6; font-size: 24px;padding-top: 5px;    margin-bottom: 5px;">Aanmaken reservering</p>
@@ -30,18 +32,18 @@
 
             <div>
                 <h4>Dagdeel</h4>
-                <div  class="Daypart-div">
+                <div class="Daypart-div">
                     <div class="Daypart">
-                    <button  type="button" @onclick="(e => SelectedDaypart(false))"  class="btn Daypart-btn Daypart-btn-lunch">
-                        <h5>Lunch</h5>
-                        <p>11:00 - 16:00</p>
-                    </button>
-                    <button type="button" @onclick="(e=> SelectedDaypart(true))"  class="btn Daypart-btn   Daypart-btn-diner">
-                         <h5>Diner</h5>
-                         <p>17:00 - 20:00</p>
-                    </button>
+                        <button type="button" @onclick="(e => SelectedDaypart(false))" class="btn Daypart-btn Daypart-btn-lunch">
+                            <h5>Lunch</h5>
+                            <p>11:00 - 16:00</p>
+                        </button>
+                        <button type="button" @onclick="(e=> SelectedDaypart(true))" class="btn Daypart-btn   Daypart-btn-diner">
+                            <h5>Dinner</h5>
+                            <p>17:00 - 20:00</p>
+                        </button>
                     </div>
-    
+
 
                 </div>
             </div>
@@ -50,64 +52,62 @@
 
     </div>
 
-    <button type="submit" @onclick="(e => InsertUser())" class=" btn-ResAdmin btn btn-primary">
+    <button type="submit" @onclick="CheckDoubleUser" class=" btn-ResAdmin btn btn-primary">
         Reserveren
     </button>
 </form>
 <div class="Table-div">
 
     <h1>Tafel kiezen</h1>
-    <div class="Tafel   card-group" style=" background-image: url('images/tafel-van-zes.png');  width:500px; height:450px; margin-left: 69px;
-        margin-bottom: 36px; ">
+    <div class="Tafel   card-group" style=" background-image: url('images/tafel-van-zes.png');  width:500px; height:450px; margin-left: 69px; margin-bottom: 36px; ">
 
         <div style=" margin-left:21%; margin-top: 7%;">
 
-            <button @onclick="(e => SelectedTable(1))" style="width: 47px;
-        height: 57px; margin-left: 10px;   margin-right: 33px; " class="Tafel tafels btn btn-primary">
+            <button id="Table1" type="button" @onclick="(e => SelectedTable(1))" style="width: 47px;
+        height: 57px; margin-left: 10px;   margin-right: 33px; " class="Tafel TableWitFour btn btn-primary">
                 1
             </button>
 
-            <button @onclick="(e => SelectedTable(2))" style="width: 47px;
-        height: 57px; margin-left: 10px;   margin-right: 33px; " class="Tafel btn btn-primary">
+            <button id="Table2" type="button" @onclick="(e => SelectedTable(2))" style="width: 47px;
+        height: 57px; margin-left: 10px;   margin-right: 33px; " class="Tafel  TableWitFour btn btn-primary">
                 2
             </button>
-            <button @onclick="(e => SelectedTable(3))" style="width: 47px;
-        height: 57px; margin-left: 10px;   margin-right: 33px; " class="Tafel btn btn-primary">
+            <button id="Table3" type="button" @onclick="(e => SelectedTable(3))" style="width: 47px;
+        height: 57px; margin-left: 10px;   margin-right: 33px; " class="Tafel TableWitFour btn btn-primary">
                 3
             </button>
         </div>
 
         <div style="margin-top: 7%;">
-            <button class="Tafel  btn btn-primary" @onclick="(e => SelectedTable(4))" style="width: 47px; height: 87px; margin-left: 27px; margin-right: 40px; margin-top: 15px;">
+            <button id="Table4" type="button" class="Tafel TableWitSix  btn btn-primary" @onclick="(e => SelectedTable(4))" style="width: 47px; height: 87px; margin-left: 27px; margin-right: 40px; margin-top: 15px;">
                 4
             </button>
         </div>
 
         <div style="padding-left: 50%;height: 7%; margin-top: -3%;">
-            <button @onclick="(e => SelectedTable(5))" style="width: 30px; height: 35px; margin-right:48px;" class=" Tafel btn btn-primary">6</button>
-            <button @onclick="(e => SelectedTable(6))" style="width: 30px; height: 35px; " class=" Tafel btn btn-primary">5</button>
+            <button id="Table5" type="button" @onclick="(e => SelectedTable(5))" style="width: 30px; height: 35px; margin-right:48px;" class="Tafel TableWitTwo btn btn-primary">6</button>
+            <button id="Table6" type="button" @onclick="(e => SelectedTable(6))" style="width: 30px; height: 35px; " class="Tafel TableWitTwo  btn btn-primary">5</button>
         </div>
 
         <div style="width: 27%; margin-left: 1%;margin-bottom: 24%;  margin-top: 3%;">
-            <button @onclick="(e => SelectedTable(8))" style="width: 58px;  height: 48px; margin-left: 25px;  margin-right: 33px;  margin-top: 17%;" class=" Tafel btn btn-primary">
+            <button id="Table8" type="button" @onclick="(e => SelectedTable(8))" style="width: 58px;  height: 48px; margin-left: 25px;  margin-right: 33px;  margin-top: 17%;" class=" Tafel TableWitFour btn btn-primary">
                 8
             </button>
-            <button @onclick="(e => SelectedTable(10))" style="width: 58px;  height: 48px;  margin-left: 25px;  margin-right: 33px;  margin-top: 31%;" class=" Tafel btn btn-primary">
+            <button id="Table10" type="button" @onclick="(e => SelectedTable(10))" style="width: 58px;  height: 48px;  margin-left: 25px;  margin-right: 33px;  margin-top: 31%;" class=" Tafel TableWitFour btn btn-primary">
                 10
             </button>
-            <button @onclick="(e => SelectedTable(11))" style=" width: 90px; height: 48px; margin-left: 25px; margin-right: 33px;   margin-top: 34%;" class="Tafel  btn btn-primary">
+            <button id="Table11" type="button" @onclick="(e => SelectedTable(11))" style=" width: 90px; height: 48px; margin-left: 25px; margin-right: 33px;   margin-top: 34%;" class="Tafel TableWitSix  btn btn-primary">
                 11
             </button>
         </div>
         <div style="  width: 19%; margin-left: 1%; ">
-            <button @onclick="(e => SelectedTable(7))" style="width: 58px;height: 46px; margin-left: 7px;margin-right: 6px; margin-top: 20%;" class="Tafel btn btn-primary">
+            <button id="Table7" type="button" @onclick="(e => SelectedTable(7))" style="width: 58px;height: 46px; margin-left: 7px;margin-right: 6px; margin-top: 20%;" class="Tafel TableWitFour btn btn-primary">
                 7
             </button>
-            <button @onclick="(e => SelectedTable(9))" style=" width: 59px; height: 45px; margin-left: 7px; margin-right: 33px;  margin-top: 55%;" class="Tafel btn btn-primary">
+            <button id="Table9" type="button" @onclick="(e => SelectedTable(9))" style=" width: 59px; height: 45px; margin-left: 7px; margin-right: 33px;  margin-top: 55%;" class="Tafel TableWitFour  btn btn-primary">
                 9
             </button>
         </div>
-
     </div>
 
 </div>
@@ -117,13 +117,18 @@
 @code{
 
 
-    public int i;
+
+
+
+
+
+
     SqlConnection con = new SqlConnection();
     public string Message;
     Reservation CreateRes = new Reservation();
-  
-//Check of mail correct is anders stuurt de 
-  bool IsValidEmail(string email)
+
+    //Check of mail correct is anders stuurt de
+    bool IsValidEmail(string email)
     {
         try
         {
@@ -136,7 +141,8 @@
         }
     }
 
-   //Pak de waarde van geselecteerd tafel
+
+    //Pak de waarde van geselecteerd tafel
 
     void SelectedTable(int SelectedTable)
     {
@@ -151,21 +157,56 @@
     {
         if (SelectedDaypart == false)
         {
-            CreateRes.Daypart = "lunch";
+            CreateRes.Daypart = "Lunch";
         }
         else
         {
-            CreateRes.Daypart = "diner";
+            CreateRes.Daypart = "Dinner";
         }
         Message = "daypart  gekozen" + CreateRes.Daypart.ToString();
         Debug.WriteLine(Message);
+
+        if (CreateRes.Amount == 6)
+        {
+            LessThenSix();
+
+        }
+    }
+    async Task LessThenSix()
+    {
+        await JsRuntime.InvokeVoidAsync("Disabled");
+
     }
 
-        //Zet Gast neer in database
+    void CheckDoubleUser()
+    {
+
+        con.SqlQuery("SELECT `id_Guest` FROM `guest` WHERE `FullName`=@Fullname AND `Email`=@Email");
+        con.Cmd.Parameters.AddWithValue("@Fullname", CreateRes.FullName);
+        con.Cmd.Parameters.AddWithValue("@Email", CreateRes.Email);
+
+        foreach (DataRow dr in con.QueryEx().Rows)
+        {
+            CreateRes.id = Convert.ToInt32(dr[0].ToString());
+        }
+
+        if (CreateRes.id == 0)
+        {
+            InsertUser();
+
+        }
+        else
+        {
+            InsertReservation();
+
+        }
+
+    }
+    //Zet Gast neer in database
     void InsertUser()
     {
 
-        if (IsValidEmail(CreateRes.Email) != false )
+        if (IsValidEmail(CreateRes.Email) != false)
         {
             con.SqlQuery("INSERT INTO `guest`(`FullName`, `Email`) VALUES (@Fullname,@Email)");
             con.Cmd.Parameters.AddWithValue("@Fullname", CreateRes.FullName);
@@ -176,27 +217,19 @@
 
 
     }
-        //Zet Gast neer in database
+    //Zet Gast neer in database
     void InsertReservation()
     {
-        con.SqlQuery("SELECT `id_Guest` FROM `guest` WHERE `FullName`=@Fullname AND `Email`=@Email");
-        con.Cmd.Parameters.AddWithValue("@Fullname", CreateRes.FullName);
-        con.Cmd.Parameters.AddWithValue("@Email", CreateRes.Email);
-        con.QueryEx();
 
-        foreach (DataRow dr in con.QueryEx().Rows)
-        {
-            string id = dr[0].ToString();
 
-            con.SqlQuery("INSERT INTO `reservation`(`Date`, `DayPart`, `TableNumber`, `Guest`, `Amount`) VALUES (@Date,@Daypart,@TableNumber,@Guest,@Amount)");
-            con.Cmd.Parameters.AddWithValue("@Date", CreateRes.date);
-            con.Cmd.Parameters.AddWithValue("@Daypart", CreateRes.Daypart);
-            con.Cmd.Parameters.AddWithValue("@TableNumber", CreateRes.Table);
-            con.Cmd.Parameters.AddWithValue("@Guest", id);
-            con.Cmd.Parameters.AddWithValue("@Amount", CreateRes.Amount);
-            con.NonQueryEx();
+        con.SqlQuery("INSERT INTO `reservation`(`Date`, `DayPart`, `TableNumber`, `Guest`, `Amount`) VALUES (@Date,@Daypart,@TableNumber,@Guest,@Amount)");
+        con.Cmd.Parameters.AddWithValue("@Date", CreateRes.date);
+        con.Cmd.Parameters.AddWithValue("@Daypart", CreateRes.Daypart);
+        con.Cmd.Parameters.AddWithValue("@TableNumber", CreateRes.Table);
+        con.Cmd.Parameters.AddWithValue("@Guest", CreateRes.id);
+        con.Cmd.Parameters.AddWithValue("@Amount", CreateRes.Amount);
+        con.NonQueryEx();
 
-        }
 
     }
 }
