--- a/ReservationAdmin/wwwroot/css/site.css
+++ b/ReservationAdmin/wwwroot/css/site.css
@@ -3,93 +3,102 @@ for details on configuring this project to bundle and minify static web assets. 
 
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
 
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+    color: #0366d6;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
+
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #e5e5e5;
 }
+
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
 button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+    font-size: 1rem;
+    line-height: inherit;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
+    position: relative;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px; /* Vertically center the text there */
 }
+
 .nav-link {
     color: #fff;
     font-weight: 400;
 }
+
 .navItem {
     margin-bottom: 500px;
 }
+
 .IconItem {
     color: #A5A4BF;
 }
+
 .active {
     background-color: rgba(0,0,0,0.2);
     border-left: 2px solid #A3A0FB;
 }
+
     .active > .nav-link {
         padding-left: 8px;
     }
-    .active > .nav-link > .IconItem {
-        color: #A3A0FB;
-    }
+
+        .active > .nav-link > .IconItem {
+            color: #A3A0FB;
+        }
 
 
 .form-control, .form-controls {
@@ -128,13 +137,19 @@ body {
     background-color: #1b6ec2;
     border-color: #1861ac;
 }
+
 .Tafel {
     border: none;
+    background-color: #29832a;
+}
+
+.Disabled {
+    pointer-events: none;
     background-color: dimgray;
 }
 
-.Tafel:focus{
-   background-color: #0366d6;
+.Tafel:focus {
+    background-color: #0366d6;
 }
 
 .Daypart-div {
@@ -145,6 +160,7 @@ body {
     margin-top: 62px;
     padding: 1% 4% 7% 1%;
 }
+
 .Daypart {
     border: 1px solid #E6DBDA;
     border-radius: 4px;
@@ -158,25 +174,31 @@ body {
     padding-right: 28px;
     padding-left: 17px;
 }
+
 .Daypart-btn-diner {
     width: 46%;
     padding-left: 6%;
 }
+
 .Daypart-btn:hover {
-        background-color: #0366d6;
-    }
+    background-color: #0366d6;
+}
+
 .Table-div {
     margin-left: 50%;
     padding-top: 2%;
 }
+
 .btn-ResAdmin {
     float: right;
     margin-top: 45%;
     margin-right: 5%;
 }
+
 h4 {
     color: #707070;
 }
-.CHidden{
+
+.CHidden {
     visibility: hidden;
 }
