--- a/CostumeTest/Components/CreateReservation.razor
+++ b/CostumeTest/Components/CreateReservation.razor
@@ -17,12 +17,12 @@
             <div class="form-inline  form-group">
                 <label for="Name">Volledig naam</label>
 
-                <input type="text" class="form-controls" @bind="CreateRes.FullName" aria-describedby="FullName" placeholder="Volledige naam" required />
+                <input type="text" class="form-controls" @bind="CreateGuest.FullName" aria-describedby="FullName" placeholder="Volledige naam" required />
 
             </div>
             <div class="form-inline form-group ">
                 <label for="Email">Email      </label>
-                <input type="email" class="form-controls Field-Email" @bind="CreateRes.Email" aria-describedby="emailHelp" placeholder="Email adres" required />
+                <input type="email" class="form-controls Field-Email" @bind="CreateGuest.Email" aria-describedby="emailHelp" placeholder="Email adres" required />
 
             </div>
             <div class="form-inline  form-group">
@@ -158,12 +158,12 @@
             <div class="form-inline form-group  ">
                 <label for="Dagdeel" class="label">Naam:</label>
 
-                <input type="text" class="form-controls name-field" value="@CreateRes.FullName" required disabled />
+                <input type="text" class="form-controls name-field" value="@CreateGuest.FullName" required disabled />
             </div>
             <div class="form-inline form-group ">
                 <label for="Dagdeel" class="label">E-mail:</label>
 
-                <input type="email" class="form-controls Email-field" value="@CreateRes.Email" required disabled />
+                <input type="email" class="form-controls Email-field" value="@CreateGuest.Email" required disabled />
             </div>
             <div class="form-inline form-group ">
                 <label for="Dagdeel" class="label">Aantal personen:</label>
@@ -196,6 +196,7 @@
     SqlConnection con = new SqlConnection();
     public string Message;
     Reservation CreateRes = new Reservation();
+    Guest CreateGuest = new Guest();
     public int Rese;
     [Parameter]
     public DateTime date { get; set; } = DateTime.Now;
@@ -216,7 +217,7 @@
         else
         {
             // checkt of de email correct om de function NextDiv gebruiken
-            if (IsValidEmail(CreateRes.Email) != false)
+            if (IsValidEmail(CreateGuest.Email) != false)
             {
                 await JsRuntime.InvokeVoidAsync("NextDiv", FormqClicked);
 
@@ -317,11 +318,11 @@
 
     void CheckBlockedOrNotFilled()
     {
-        if (CreateRes.FullName == null || CreateRes.Amount == 0)
+        if (CreateGuest.FullName == null || CreateRes.Amount == 0)
         {
             NotFilledOrCorrect(false);
         }
-        else if (IsValidEmail(CreateRes.Email) == false)
+        else if (IsValidEmail(CreateGuest.Email) == false)
         {
 
             NotFilledOrCorrect(true);
@@ -331,16 +332,16 @@
         {
             //SELECT `IsBlocked` FROM `guest` WHERE `Email`=@Email
             con.SqlQuery("SELECT Count(`IsBlocked`) FROM `guest` WHERE `Email`=@Email AND `IsBlocked`=1");
-            con.Cmd.Parameters.AddWithValue("@Email", CreateRes.Email);
+            con.Cmd.Parameters.AddWithValue("@Email", CreateGuest.Email);
             foreach (DataRow dr in con.QueryEx().Rows)
             {
 
                 Debug.WriteLine("get");
-                CreateRes.IsBlocked = Convert.ToInt32(dr[0].ToString());
+                CreateGuest.IsBlocked = Convert.ToInt32(dr[0].ToString());
 
             }
 
-            if (CreateRes.IsBlocked >= 1)
+            if (CreateGuest.IsBlocked >= 1)
             {
                 BLocked();
             }
@@ -404,15 +405,15 @@
     {
 
         con.SqlQuery("SELECT `id_Guest` FROM `guest` WHERE `FullName`=@Fullname AND `Email`=@Email");
-        con.Cmd.Parameters.AddWithValue("@Fullname", CreateRes.FullName);
-        con.Cmd.Parameters.AddWithValue("@Email", CreateRes.Email);
+        con.Cmd.Parameters.AddWithValue("@Fullname", CreateGuest.FullName);
+        con.Cmd.Parameters.AddWithValue("@Email", CreateGuest.Email);
         foreach (DataRow dr in con.QueryEx().Rows)
         {
 
-            CreateRes.id = Convert.ToInt32(dr[0].ToString());
+            CreateGuest.id = Convert.ToInt32(dr[0].ToString());
         }
 
-        if (CreateRes.id == 0)
+        if (CreateGuest.id == 0)
         {
             InsertUser();
         }
@@ -428,8 +429,8 @@
         //SELECT `id_Guest` FROM `guest` WHERE `FullName`='Toos' AND `Email`='Wu.rud@hotmail.com'
 
         con.SqlQuery("INSERT INTO `guest`(`FullName`, `Email`) VALUES (@Fullname,@Email)");
-        con.Cmd.Parameters.AddWithValue("@Fullname", CreateRes.FullName);
-        con.Cmd.Parameters.AddWithValue("@Email", CreateRes.Email);
+        con.Cmd.Parameters.AddWithValue("@Fullname", CreateGuest.FullName);
+        con.Cmd.Parameters.AddWithValue("@Email", CreateGuest.Email);
         con.NonQueryEx();
 
         CheckDoubleUser();
@@ -443,14 +444,13 @@
         con.Cmd.Parameters.AddWithValue("@Date", CreateRes.date);
         con.Cmd.Parameters.AddWithValue("@Daypart", CreateRes.Daypart);
         con.Cmd.Parameters.AddWithValue("@TableNumber", CreateRes.Table);
-        con.Cmd.Parameters.AddWithValue("@Guest", CreateRes.id);
+        con.Cmd.Parameters.AddWithValue("@Guest", CreateGuest.id);
         con.Cmd.Parameters.AddWithValue("@Amount", CreateRes.Amount);
         con.NonQueryEx();
 
 
         GetSuccesfulMessage();
-        NextOrLastDiv(false, 1);
-
-
+        NextOrLastDiv(true, 0);
+    
     }
 }
