--- a/ReservationAdmin/Component/ReservationCreate.razor
+++ b/ReservationAdmin/Component/ReservationCreate.razor
@@ -15,12 +15,12 @@
                 <div class="form-inline  form-group">
                     <label for="Name">Volledig naam</label>
 
-                    <input type="text" class="form-controls" @bind="CreateRes.FullName" aria-describedby="FullName" placeholder="Volledige naam" required />
+                    <input type="text" class="form-controls" @bind="CreateGuest.FullName" aria-describedby="FullName" placeholder="Volledige naam" required />
 
                 </div>
                 <div class="form-inline form-group ">
                     <label for="Email" style="margin-right:10%;">Email      </label>
-                    <input type="email" class="form-controls" @bind="CreateRes.Email" aria-describedby="emailHelp" placeholder="Email adres" required />
+                    <input type="email" class="form-controls" @bind="CreateGuest.Email" aria-describedby="emailHelp" placeholder="Email adres" required />
 
                 </div>
                 <div class="form-inline  form-group">
@@ -117,16 +117,11 @@
 @code{
 
 
-
-
-
-
-
-
     SqlConnection con = new SqlConnection();
     public string Message;
     Reservation CreateRes = new Reservation();
-
+    Guest CreateGuest = new Guest();
+   
     //Check of mail correct is anders stuurt de
     bool IsValidEmail(string email)
     {
@@ -182,15 +177,15 @@
     {
 
         con.SqlQuery("SELECT `id_Guest` FROM `guest` WHERE `FullName`=@Fullname AND `Email`=@Email");
-        con.Cmd.Parameters.AddWithValue("@Fullname", CreateRes.FullName);
-        con.Cmd.Parameters.AddWithValue("@Email", CreateRes.Email);
+        con.Cmd.Parameters.AddWithValue("@Fullname", CreateGuest.FullName);
+        con.Cmd.Parameters.AddWithValue("@Email", CreateGuest.Email);
 
         foreach (DataRow dr in con.QueryEx().Rows)
         {
-            CreateRes.id = Convert.ToInt32(dr[0].ToString());
+            CreateGuest.id = Convert.ToInt32(dr[0].ToString());
         }
 
-        if (CreateRes.id == 0)
+        if (CreateGuest.id == 0)
         {
             InsertUser();
 
@@ -206,11 +201,11 @@
     void InsertUser()
     {
 
-        if (IsValidEmail(CreateRes.Email) != false)
+        if (IsValidEmail(CreateGuest.Email) != false)
         {
             con.SqlQuery("INSERT INTO `guest`(`FullName`, `Email`) VALUES (@Fullname,@Email)");
-            con.Cmd.Parameters.AddWithValue("@Fullname", CreateRes.FullName);
-            con.Cmd.Parameters.AddWithValue("@Email", CreateRes.Email);
+            con.Cmd.Parameters.AddWithValue("@Fullname", CreateGuest.FullName);
+            con.Cmd.Parameters.AddWithValue("@Email", CreateGuest.Email);
             con.NonQueryEx();
             InsertReservation();
         }
@@ -226,7 +221,7 @@
         con.Cmd.Parameters.AddWithValue("@Date", CreateRes.date);
         con.Cmd.Parameters.AddWithValue("@Daypart", CreateRes.Daypart);
         con.Cmd.Parameters.AddWithValue("@TableNumber", CreateRes.Table);
-        con.Cmd.Parameters.AddWithValue("@Guest", CreateRes.id);
+        con.Cmd.Parameters.AddWithValue("@Guest", CreateGuest.id);
         con.Cmd.Parameters.AddWithValue("@Amount", CreateRes.Amount);
         con.NonQueryEx();
 
