--- a/CostumeTest/Pages/Shared/_Layout.cshtml
+++ b/CostumeTest/Pages/Shared/_Layout.cshtml
@@ -13,15 +13,11 @@
     
 
 </head>
-<body style="background-color:#D5DAD7;">
+<body >
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background-color:#545871;">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index" style="color:white;">Reservering systeem</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
             </div>
         </nav>
     </header>
@@ -31,7 +27,7 @@
         </main>
 
     </div>
-    <footer class="footer">
+    <footer  class="footer">
     
     </footer>
 
