--- a/CostumeTest/Pages/Index.cshtml
+++ b/CostumeTest/Pages/Index.cshtml
@@ -21,36 +21,11 @@
 
     <!--Haalt de forms en zet het neer als html -->
     @(await Html.RenderComponentAsync<CreateReservation>(RenderMode.ServerPrerendered))
+    @(await Html.RenderComponentAsync<Message>(RenderMode.ServerPrerendered))
 
     <script src="_framework/blazor.server.js"></script>
     <script src="js/button.js"></script>
 
-    <!--=        <br />
-            <br />
-            <input id="3" type="button" value="3" class="buttons" />
-            <div id="div3" class="divs" style="width: 200px; height: 100px; background-color: pink">
-                Div 3
-            </div>
-            <br />
-            <br />
-            <input id="4" type="button" value="4" class="buttons" />
-            <div id="div4" class="divs" style="width: 200px; height: 100px; background-color: pink">
-                Div 4
-            </div>
-            <br />
-            <br />
-            <input id="5" type="button" value="5" class="buttons" />
-            <div id="div5" class="divs" style="width: 200px; height: 100px; background-color: pink">
-                Div 5
-            </div>
-            <br />
-            <br />
-            <input id="6" type="button" value="6" class="buttons" />
-            <div id="div6" class="divs" style="width: 200px; height: 100px; background-color: pink">
-                Div 6
-            </div>
-            <br />
-            <br />-->
   
 
 </body >
