--- a/CostumeTest/Components/Message.razor
+++ b/CostumeTest/Components/Message.razor
@@ -10,11 +10,11 @@
             </div>
             <div class="modal-body">
                 <p>
-                    Het blijkt dat je email waarmee je wilt reserveren is geblokkeerd. Bel de restaurant om een reservering te maken.
+                    Het blijkt dat de email waarmee je wilt reserveren is geblokkeerd. Bel het restaurant om een reservering te maken.
                 </p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Oke</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Sluiten</button>
             </div>
         </div>
     </div>
@@ -32,7 +32,7 @@
             </div>
             <div class="modal-body">
                 <p>
-                    Niet alle velden zijn ingevoerd/gekozen
+                    Sommige velden zijn niet correct ingevoerd of gekozen
                 </p>
             </div>
             <div class="modal-footer">
