--- a/CostumeTest/Components/CreateReservation.razor
+++ b/CostumeTest/Components/CreateReservation.razor
@@ -57,7 +57,7 @@
             </div>
             <div class="form-inline  form-group">
                 <label for="InputAmount">Aantal personen</label>
-                <input type="number" class="form-control" @bind="CreateRes.Amount" aria-describedby="Amount" placeholder="0" min="1" max="6" required />
+                <input type="number" class="form-control "  @bind="CreateRes.Amount" aria-describedby="Amount" placeholder="0" min="1" max="6" required />
             </div>
 
         </div>
@@ -104,7 +104,7 @@
             <button type="button" @onclick="(e => NextOrLastDiv(false, 3))" class="btn btn-primary" style="float:left">
                 terug
             </button>
-            <button type="button" @onclick="CheckNumberDaypart" class="btn btn-primary" style="float:right">Volgende </button>
+            <button type="button" @onclick="CheckDaypart" class="btn btn-primary" style="float:right">Volgende </button>
         </div>
 
     </div>
@@ -112,7 +112,7 @@
 <form>
     <div id="div4" class="divs CHidden TableGroupDIV">
         <h2>Tafel kiezen</h2>
-        <div class="Tafel   card-group" style=" background-image: url('images/tafel-van-zes.png');  width:500px; height:450px; margin-left: 103px;
+        <div class="Tafel   card-group" style=" background-image: url('images/Tafel-van-zes.png');  width:500px; height:450px; margin-left: 103px;
         margin-bottom: 36px; ">
 
             <div style=" margin-left:21%; margin-top: 7%;">
@@ -139,8 +139,8 @@
             </div>
 
             <div style="padding-left: 50%;height: 7%; margin-top: -3%;">
-                <button id="Table5" type="button" @onclick="(e => SelectedTable(5))" style="width: 30px; height: 35px; margin-right:48px;" class="Tafel TableWitTwo btn btn-primary">6</button>
-                <button id="Table6" type="button" @onclick="(e => SelectedTable(6))" style="width: 30px; height: 35px; " class="Tafel TableWitTwo  btn btn-primary">5</button>
+                <button id="Table6" type="button" @onclick="(e => SelectedTable(6))" style="width: 30px; height: 35px; margin-right:48px;" class="Tafel TableWitTwo btn btn-primary">6</button>
+                <button id="Table5" type="button" @onclick="(e => SelectedTable(5))" style="width: 30px; height: 35px; " class="Tafel TableWitTwo  btn btn-primary">5</button>
             </div>
 
             <div style="width: 27%; margin-left: 1%;margin-bottom: 24%;  margin-top: 3%;">
@@ -172,42 +172,42 @@
 </form>
 <form>
     <div id="div5" class="divs CHidden">
-
         <div id="divOverview">
             <h2> Overzicht</h2>
-            <div class="form-inline  form-group">
-                <label for="Datum" class="label">Datum: </label>
+            <div id="formOverview">
+                <div class="form-inline  form-group">
+                    <label for="Datum" class="label">Datum: </label>
 
-                <input type="text" class="form-controls  date-field" @bind="DateInText" required disabled />
+                    <input type="text" class="form-controls  date-field" @bind="DateInText" required disabled />
+                </div>
+                <div class="form-inline form-group ">
+                    <label for="Dagdeel" class="label">Dagdeel:</label>
+
+                    <input class="form-controls Daypart-field" value="@DayPart" required disabled />
+                </div>
+                <div class="form-inline form-group  ">
+                    <label for="Dagdeel" class="label">Naam:</label>
+
+                    <input type="text" class="form-controls name-field" value="@CreateGuest.FullName" required disabled />
+                </div>
+                <div class="form-inline form-group ">
+                    <label for="Dagdeel" class="label">E-mail:</label>
+
+                    <input type="email" class="form-controls Email-field" value="@CreateGuest.Email" required disabled />
+                </div>
+                <div class="form-inline form-group ">
+                    <label for="Dagdeel" class="label">Aantal personen:</label>
+
+                    <input type="number" class="form-controls amount-field" value="@CreateRes.Amount" required disabled />
+                </div>
+                <div class="form-inline form-group ">
+                    <label for="Dagdeel" class="label">Tafel:</label>
+
+                    <input type="number" class="form-controls table-field" value="@CreateRes.Table" required disabled />
+                </div>
+
+
             </div>
-            <div class="form-inline form-group ">
-                <label for="Dagdeel" class="label">Dagdeel:</label>
-
-                <input class="form-controls Daypart-field" value="@DayPart" required disabled />
-            </div>
-            <div class="form-inline form-group  ">
-                <label for="Dagdeel" class="label">Naam:</label>
-
-                <input type="text" class="form-controls name-field" value="@CreateGuest.FullName" required disabled />
-            </div>
-            <div class="form-inline form-group ">
-                <label for="Dagdeel" class="label">E-mail:</label>
-
-                <input type="email" class="form-controls Email-field" value="@CreateGuest.Email" required disabled />
-            </div>
-            <div class="form-inline form-group ">
-                <label for="Dagdeel" class="label">Aantal personen:</label>
-
-                <input type="number" class="form-controls amount-field" value="@CreateRes.Amount" required disabled />
-            </div>
-            <div class="form-inline form-group ">
-                <label for="Dagdeel" class="label">Tafel:</label>
-
-                <input type="number" class="form-controls table-field" value="@CreateRes.Table" required disabled />
-            </div>
-
-
-
             <button type="button" @onclick="(e => NextOrLastDiv(false, 5))" class="btn btn-primary" style="float:left">
                 terug
             </button>
@@ -268,7 +268,7 @@
         DateInText = CreateRes.date.ToLongDateString();
 
     }
-    //Gereserfveerd tafel
+    //Gereserfveerd Tafel
     async Task DisabledReserved(int Tableres)
     {
         await JsRuntime.InvokeVoidAsync("DisabledReserved", Tableres);
@@ -281,42 +281,38 @@
     }
 
     // Kijkt of de terug of volgende knop is gedrukt
-    async Task GetSuccesfulMessage()
+    async Task GetMessage(string subject)
     {
-
-        await JsRuntime.InvokeVoidAsync("Message");
-
-    }
-
-    //Blocked email
-    async Task BLocked()
-    {
-        await JsRuntime.InvokeVoidAsync("Blocked");
-    }
-
-    //Niet gevuld
-    async Task NotFilledOrCorrect(bool Result)
-    {
-        if (Result == false)
+        if (subject == "Succes")
         {
-            await JsRuntime.InvokeVoidAsync("NotFilled");
-        }
-        else
+            await JsRuntime.InvokeVoidAsync("Message", subject);
+
+        }else if (subject == "Blocked")
         {
-            await JsRuntime.InvokeVoidAsync("NotCorrect");
+            await JsRuntime.InvokeVoidAsync("Message", subject);
+
+        }else if (subject == "Chosen")
+        {
+            await JsRuntime.InvokeVoidAsync("Message", subject);
+
+        }else if (subject == "Email")
+        {
+            await JsRuntime.InvokeVoidAsync("Message", subject);
+
         }
     }
 
     //Dagdeel gekozen
-    void CheckNumberDaypart()
+    void CheckDaypart()
     {
         if (CreateRes.Daypart == "" || CreateRes.Daypart == null)
         {
-            NotFilledOrCorrect(false);
+            GetMessage("Chosen");
 
         }
         else
         {
+
             NextOrLastDiv(true, 3);
         }
     }
@@ -326,7 +322,7 @@
     {
         if (CreateRes.Table == 0 || CreateRes.Table == null)
         {
-            NotFilledOrCorrect(false);
+            GetMessage("Chosen");
         }
         else
         {
@@ -354,16 +350,19 @@
     {
         if (CreateGuest.FullName == null || CreateRes.Amount == 0)
         {
-            NotFilledOrCorrect(false);
+            GetMessage("Chosen");
         }
         else if (IsValidEmail(CreateGuest.Email) == false)
         {
 
-            NotFilledOrCorrect(true);
+            GetMessage("Email");
 
         }
-        else
+        else if (CreateRes.Amount > 6)
         {
+           GetMessage("Chosen");
+
+        }else{
             //SELECT `IsBlocked` FROM `guest` WHERE `Email`=@Email
             con.SqlQuery("SELECT Count(`IsBlocked`) FROM `guest` WHERE `Email`=@Email AND `IsBlocked`=1");
             con.Cmd.Parameters.AddWithValue("@Email", CreateGuest.Email);
@@ -377,7 +376,7 @@
 
             if (CreateGuest.IsBlocked >= 1)
             {
-                BLocked();
+                GetMessage("Blocked");
             }
             else
             {
@@ -387,7 +386,7 @@
         }
 
     }
-    //Pak de waarde van geselecteerd tafel
+    //Pak de waarde van geselecteerd Tafel
 
     void SelectedTable(int SelectedTable)
     {
@@ -410,12 +409,9 @@
             DayPart = "Dinner 17:00 - 20:00";
 
         }
-        Message = "daypart  gekozen" + CreateRes.Daypart.ToString();
-        Debug.WriteLine(Message);
 
-
-        LessThenSixFourOrTwo();
         ReserveTable();
+        LessThenSixFourOrTwo();
 
 
     }
@@ -483,7 +479,7 @@
         con.NonQueryEx();
 
 
-        GetSuccesfulMessage();
+        GetMessage("Succes");
         NextOrLastDiv(true, 0);
 
     }
