--- a/ReservationAdmin/Pages/Agenda.cshtml
+++ b/ReservationAdmin/Pages/Agenda.cshtml
@@ -43,8 +43,10 @@
     </div>
 </div>
 <div style="background-color:#D5DAD7; float :left; width: 35%;  height: 100vh;">
-    <p style="     margin-left: 7%; color: #9597A6; font-size: 24px;padding-top: 5px;    margin-bottom: 5px;">Agenda</p>
-    @(await Html.RenderComponentAsync<Component>(RenderMode.ServerPrerendered))
+    <p style="margin-left: 7%; color: #9597A6; font-size: 24px;padding-top: 5px;    margin-bottom: 5px;">Agenda</p>
+    @(await Html.RenderComponentAsync<SelectReservations>(RenderMode.ServerPrerendered))
 </div> 
-                 
+<div style="float: left">
+    @(await Html.RenderComponentAsync<GetReservations>(RenderMode.ServerPrerendered))
+</div>
 <script src="_framework/blazor.server.js"></script>
